--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
   - chmod +x $CCTR
   - $CCTR before-build
   - gem install bundler:1.15.3
+  - - bundle _1.15.3 install
 script:
   - bundle exec rake db:setup
   - bundle exec rake rspec
